# JQR

./: CMakeLists.txt  make.sh  monster.c  monster.fbs  mycert.pem  notes  secureCoding.c  secureCoding.txt  signals.c  ssl_client.c  ssl_server.c  test.c  test.h  test_prg.c  test_src.c  thread.c
3-1/: 01.txt  04  04.c  05  05.c  06  06.c  07  07.c  08  08.c  09  09.c  10  10.c  11  12  12.c  12_client  12_client.c  12_listener.c  12_serial_recv.c  12_serial_send.c  12_server  12_server.c  12_talker.c  13  13.c  14  14.c  15  15.c  16  16.c  16_old.c  21  21.c  dijkstra.c  test  test.c
3-1-10/: 3-1-10
3-1-11/: 3-1-11  3-1-11.c
3-1-13/: 3-1-13
3-1-14/: 3-1-14
3-1-15/: 3-1-15
3-1-4/: 3-1-4  3-1-4.c
3-1-5/: 3-1-5  3-1-5.c
3-1-6/: 3-1-6
3-1-7/: 3-1-7
3-1-8/: 3-1-8
3-1-9/: 3-1-9
3-2/: beginnings.py  client.py  file.txt  files.py  parse.py  server.py
3-3/: 02  02.c  03  03.c  04  04.c  05  05.c  06.c  07  07.c  core  graphTest.c  hashTable.c  hicks.c  linkedList.c  list.h  que.h  queTest.c  stackTest.c  tree.h  treeTest.c  util.h
inc/: encode.h  graph.h  hash.h  list.h  que.h  sockets.h  sort.h  stack.h  tree.h  util.h
jqr-master/3-3/: hashTable.c
pictures/: valgrindInProgress  valgrindSolved
src/: encode.c  graph.c  hash.c  list.c  que.c  sort.c  stack.c  tree.c  util.c
